--- a/about.html
+++ b/about.html
@@ -5,14 +5,21 @@ title: About
 ---
 ## About
 
-Github's Octocat was designed by Simon Oxley, alongside the white bird Twitter used (before they received a proper logo) as part of a usual routine of cranking out images for iStock. GitHub saw it, and wanted it, presumably under the notion that it can represent how complex code combines to create peculiar things, much like the octopuss... except the CEO of GitHub called it an octocat, and it has been the octocat since <a href="https://www.quora.com/GitHub/What-is-the-story-behind-GitHub%E2%80%99s-octocat-mascot" target="_blank">[via]</a>.
+luckytianyiyan -- 一位IT小同学.
 
+就读于 厦门大学嘉庚学院 计算机系 软件工程专业.
+
+我热爱 iOS, 并从事着这方面的工作.
+
+埋头于开源社区.在 open source community 燃烧着我的青春.
+
+我喜爱 C++. 使用 Qt 的 Open Source 版本编写我的 Desktop Application.
 <small>
-Octocat is Github's logo and trademark and here is used to illustrate a fictional character (John Smith) that used the *{ Personal }* Jekyll Theme to build his website.
+(早期, 我也使用 Cocos2d-x 编写我的游戏.)
 </small>
 
-Support the repo by starring or forking it!
+我迷恋于脚本语言所带来的高效率, 热衷于 Python, Shell, Windows Batch.
 
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+除此之外, 我也略懂一些 Web前端, 以及 Web Server.我使用它们为我的软件构建 服务 以及 技术支持.
 
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=luckytianyiyan&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
